--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 body {
 	background: #CCCCCC
 }
-
 #banner {
-	width: 60%;
+	width: 100%;
 }
- #banner   img-align center		
-
+ 	
 h1 {
-	text-align: center
+	text-align: center;
+	color:red;
+	border: 5px solid black;
+	padding: 20px;
 }
-
 p {
 	text-align: center;
 }
